Disable `white-space: pre-wrap` in advanced editing mode. Fixes #2776

--- a/assets/dev/scss/editor/_inline-editor.scss
+++ b/assets/dev/scss/editor/_inline-editor.scss
@@ -1,7 +1,10 @@
 .pen {
     position: relative;
     outline: none;
-	white-space: pre-wrap;
+
+	&:not([data-elementor-inline-editing-toolbar="advanced"]) {
+		white-space: pre-wrap;
+	}
 
 	&-menu {
 		box-shadow: 1px 2px 3px -2px #222;
